--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ members = [
     "crates/http-bindgen",
     "crates/openapi-bindgen",
     "crates/wit-bindgen-http",
+    "crates/wasm-http-tools",
 ]
