--- a/crates/openapi-bindgen/Cargo.toml
+++ b/crates/openapi-bindgen/Cargo.toml
@@ -2,8 +2,8 @@
 name = "openapi-bindgen"
 version = "0.0.0"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/yoshuawuyts/openapi-wit"
-documentation = "https://docs.rs/openapi-wit"
+repository = "https://github.com/yoshuawuyts/wasm-http-tools"
+documentation = "https://docs.rs/wasm-http-tools"
 description = "Bidirectional bindings between OpenAPI (Swagger) and WIT"
 readme = "README.md"
 edition = "2021"
