--- a/crates/wit-bindgen-http/Cargo.toml
+++ b/crates/wit-bindgen-http/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/yoshuawuyts/wasm-http-tools"
 documentation = "https://docs.rs/wit-bindgen-http"
-description = "Bidirectional bindings generator between OpenAPI (Swagger) and WIT"
+description = "Automatically generate HTTP routing layers for WIT definitions"
 readme = "README.md"
 edition = "2021"
 keywords = []
