--- a/crates/wasi-http-client/Cargo.toml
+++ b/crates/wasi-http-client/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
-name = "http-bindgen"
+name = "wasi-http-client"
 version = "0.0.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/yoshuawuyts/wasm-http-tools"
 documentation = "https://docs.rs/wit-bindgen-http"
-description = "HTTP types generator"
+description = "WASI-based HTTP client library"
 readme = "README.md"
 edition = "2021"
 keywords = []
 categories = []
-authors = [
-    "Yoshua Wuyts <rust@yosh.is>"
-]
+authors = ["Yoshua Wuyts <rust@yosh.is>"]
 
 [features]
 
 [dependencies]
+wasi = "0.12.1+wasi-0.2.0"
+slab = "0.4.9"
 
 [dev-dependencies]
