fix docs rs link

--- a/crates/wasi-async-runtime/Cargo.toml
+++ b/crates/wasi-async-runtime/Cargo.toml
@@ -3,7 +3,7 @@ name = "wasi-async-runtime"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/yoshuawuyts/wasm-http-tools"
-documentation = "https://docs.rs/wit-bindgen-http"
+documentation = "https://docs.rs/wasi-async-runtime"
 description = "WASI-based async runtime library for Rust"
 readme = "README.md"
 edition = "2021"
