--- a/crates/openapi-bindgen/Cargo.toml
+++ b/crates/openapi-bindgen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "openapi-bindgen"
 version = "0.0.0"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 repository = "https://github.com/yoshuawuyts/wasm-http-tools"
 documentation = "https://docs.rs/wasm-http-tools"
 description = "Bidirectional bindings between OpenAPI (Swagger) and WIT"
@@ -9,9 +9,7 @@ readme = "README.md"
 edition = "2021"
 keywords = []
 categories = []
-authors = [
-    "Yoshua Wuyts <rust@yosh.is>"
-]
+authors = ["Yoshua Wuyts <rust@yosh.is>"]
 
 [features]
 
