--- a/crates/wasi-async-runtime/Cargo.toml
+++ b/crates/wasi-async-runtime/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasi-async-runtime"
 version = "0.1.2"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 repository = "https://github.com/yoshuawuyts/wasm-http-tools"
 documentation = "https://docs.rs/wasi-async-runtime"
 description = "WASI-based async runtime library for Rust"
