--- a/crates/wasi-http-client/Cargo.toml
+++ b/crates/wasi-http-client/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasi-http-client"
 version = "0.0.0"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0 WITH LLVM-exception"
 repository = "https://github.com/yoshuawuyts/wasm-http-tools"
 documentation = "https://docs.rs/wit-bindgen-http"
 description = "WASI-based HTTP client library"
